[metadata]
name = pyswanctl
author = nassim.babaci
author-email = nassim.babaci@cloudreach.co.uk
summary = My awsome project with python
description-file = README.rst
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Environment :: AWS
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        Operating System :: OS Independent
        Programming Language :: Python

[files]
packages =
    pyswanctl

[entry_points]
console_scripts =
    pyswanctl = pyswanctl.__main__:entry
    cliffswan = pyswanctl.cli.app:main

pyswanctl.event_handler =
    debugging = pyswanctl.handlers:debugging
    log = pyswanctl.handlers:log
    awslog = pyswanctl.handlers:awslog

pyswanctl.cli.commands = 
    list-sas = pyswanctl.cli.commands:ListSas
    list-conns = pyswanctl.cli.commands:ListConnections
    get-stats = pyswanctl.cli.commands:GetStats
    get-version = pyswanctl.cli.commands:GetVersion
    watch-exec = pyswanctl.cli.commands:WatchExec
    watch-cwlog = pyswanctl.cli.aws:CWlogs

vici.events.hook =
    test = pyswanctl.pyswanctl:test_hook
    policies = pyswanctl.pyswanctl:handle_policies
    loadbalancing = pyswanctl.pyswanctl:handle_loadbalancing
    publish_stats = pyswanctl.pyswanctl:publish_stats

